<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kana GT</string>

    <string name="button_ok">OK</string>
    <string name="button_end_quiz">End Quiz</string>
    <string name="button_start_quiz">Start Quiz</string>
    <string name="button_stats">Stats</string>
    <string name="button_settings">Settings</string>
    <string name="button_home">Home</string>
    <string name="button_welcome_hira_list">View Hiragana List</string>
    <string name="button_welcome_hira_chart">View Hiragana Chart</string>
    <string name="button_welcome_hira_quiz">Take a Practice Quiz</string>
    <string name="button_welcome_kata_list">View Katakana List</string>
    <string name="button_welcome_kata_chart">View Katakana Chart</string>
    <string name="button_welcome_kata_quiz">Take a Practice Quiz</string>
    <string name="button_stats_view_quizzes">View All Quiz Results</string>
    <string name="button_close">Close</string>

    <string name="descriptor_kana_diagram">Stroke Diagram</string>

    <string name="licence">Kana GT uses data from the following sources under the following licenses:\n\n<b>Kana Stroke Diagrams</b>\nAuthored by D.328 and M4RC0 for the Wikimedia Stroke Order Project\nLicensed under the Creative Commons Attribution-ShareAlike 2.0 Generic License\n\n<b>Kana History</b>\nAuthored by various authors for Wikipedia\nLicensed under the Creative Commons Attribution-ShareAlike 3.0 Unported License</string>

    <string name="lore_hiragana">Hiragana developed from man\'yōgana, Chinese characters used for their pronunciations, a practice which started in the 5th century. When they were first developed, hiragana were not accepted by everyone. The educated or elites preferred to use only the kanji system.\n\nHistorically, in Japan, the regular script (kaisho) form of the characters was used by men and called otokode (男手), "men's writing", while the cursive script (sōsho) form of the kanji was used by women. Hence hiragana first gained popularity among women, who were generally not allowed access to the same levels of education as men.\n\nIn modern times, the usage of hiragana has become mixed with katakana writing.</string>
    <string name="lore_katakana">Katakana was developed in the 9th century (during the early Heian period) by Buddhist monks by taking parts of man\'yōgana characters as a form of shorthand, hence this kana is so-called kata (片, ‘partial, fragmented’). Early on, katakana was almost exclusively used by men for official text and text imported from China. For example, ka (カ) comes from the left side of ka (加, literally ‘increase’, but the original meaning is no longer applicable to kana).\n\nKatakana is now relegated to special uses such as recently borrowed words (i.e., since the 19th century), names in transliteration, the names of animals, in telegrams, and for emphasis.</string>

    <string name="placeholder_generic">No Data</string>

    <string name="prefs_title_clear_database">Clear User Data</string>
    <string name="prefs_title_licenses">Licenses</string>

    <string name="prefs_summary_clear_database">Clears all user data, including statistics and test results.</string>
    <string name="prefs_summary_licenses">Show licenses used for data.</string>

    <string name="prefs_text_clear_database">This action will clear all user-generated data, such as quiz results and character learning levels, and reset them to their default values.</string>
    <string name="prefs_text_clear_database_warning">THIS ACTION CANNOT BE UNDONE.</string>

    <string name="stat_total">96 Total</string>
    <string name="stat_unknown">96 Unknown</string>
    <string name="stat_known">0 Known</string>
    <string name="stat_well_known">0 Well Known</string>
    <string name="stat_mastered">0 Mastered</string>

    <string name="title_activity_quiz">Kana Quiz</string>
    <string name="title_fragment_quiz_setup">Quiz Setup</string>
    <string name="title_fragment_hira_list">Hiragana List</string>
    <string name="title_fragment_hira_chart">Hiragana Chart</string>
    <string name="title_fragment_kata_list">Katakana List</string>
    <string name="title_fragment_kata_chart">Katakana Chart</string>
    <string name="title_fragment_stats">User Statistics</string>
    <string name="title_settings">Settings</string>
    <string name="title_quiz_history">Quiz History</string>

    <string name="title_results">Results</string>
    <string name="title_char_details">Kana Details</string>
    <string name="title_kana_stats">Kana Statistics</string>
    <string name="title_hiragana">Hiragana</string>
    <string name="title_katakana">Katakana</string>
    <string name="title_quiz_stat">Quiz Statistics</string>

    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    
    <string-array name="quiz_spinner_choices">
        <item>5 Question Quiz</item>
        <item>10 Question Quiz</item>
        <item>15 Question Quiz</item>
        <item>20 Question Quiz</item>
    </string-array>

    <string-array name="kana_set_titles">
        <item>Basic Set</item>
        <item>Extended Set</item>
        <item>Dakuten Set</item>
        <item>Diagraph Set</item>
        <item>Full Set</item>
    </string-array>

    <string-array name="hira_set_descs">
        <item>Basic Hiragana from あ-ん (46 Characters)</item>
        <item>Basic Hiragana plus Hiragana with diacritics from あ-ぺ (70 Characters)</item>
        <item>Hiragana with diacritics from が-ぺ (23 Characters)</item>
        <item>Diagraphs with and without diacritics from きゃ-ぴょ (35 Characters)</item>
        <item>All Hiragana and Diagraphs, with and without diacritics (107 Characters)</item>
    </string-array>

    <string-array name="kata_set_descs">
        <item>Basic Katakana from ア-ン (46 Characters)</item>
        <item>Basic Katakana plus Katakana with diacritics from ア-ペ (70 Characters)</item>
        <item>Katakana with diacritics from ゴ-ペ (23 Characters)</item>
        <item>Katakana with and without diacritics from キャ-ピョ (35 Characters)</item>
        <item>All Hiragana and Diagraphs, with and without diacritics (107 Characters)</item>
    </string-array>
    <string name="title_activity_credits">Credits</string>

    <string name="hello_world">Hello world!</string>
</resources>
