<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hinodesoftworks.kanagt.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/seperator"
        android:showDividers="end|middle|beginning"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/main_kana_stat_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_kana_stats"
                android:textSize="36sp"/>

            <LinearLayout
                android:id="@+id/main_kana_hiragana_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_below="@id/main_kana_stat_title">

                <TextView
                    android:id="@+id/main_kana_hiragana_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:text="@string/title_hiragana"
                    />

                <TextView
                    android:id="@+id/main_kana_hiragana_total_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:text="@string/stat_total"/>

                <TextView
                    android:id="@+id/main_kana_hiragana_unknown_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FF0000"
                    android:textSize="24sp"
                    android:text="@string/stat_unknown"/>

                <TextView
                    android:id="@+id/main_kana_hiragana_known_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#B2B22B"
                    android:textSize="24sp"
                    android:text="@string/stat_known"/>

                <TextView
                    android:id="@+id/main_kana_hiragana_well_known_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#2983A8"
                    android:textSize="24sp"
                    android:text="@string/stat_well_known"/>

                <TextView
                    android:id="@+id/main_kana_hiragana_mastered_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#2D9C2E"
                    android:textSize="24sp"
                    android:text="@string/stat_mastered"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/main_kana_katakana_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/main_kana_stat_title"
                android:layout_toRightOf="@id/main_kana_hiragana_container"
                android:layout_toEndOf="@id/main_kana_hiragana_container">

                <TextView
                    android:id="@+id/main_kana_katakana_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:text="@string/title_katakana"/>

                <TextView
                    android:id="@+id/main_kana_katakana_total_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:text="@string/stat_total"/>

                <TextView
                    android:id="@+id/main_kana_katakana_unknown_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FF0000"
                    android:textSize="24sp"
                    android:text="@string/stat_unknown"/>

                <TextView
                    android:id="@+id/main_kana_katakana_known_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#B2B22B"
                    android:textSize="24sp"
                    android:text="@string/stat_known"/>

                <TextView
                    android:id="@+id/main_kana_katakana_well_known_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#2983A8"
                    android:textSize="24sp"
                    android:text="@string/stat_well_known"/>

                <TextView
                    android:id="@+id/main_kana_katakana_mastered_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#2D9C2E"
                    android:textSize="24sp"
                    android:text="@string/stat_mastered"/>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/main_quiz_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_quiz_stat"
                android:textSize="36sp"/>

            <LinearLayout
                android:id="@+id/main_quiz_stat_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/main_quiz_title">

                <TextView
                    android:id="@+id/main_quiz_total_quizzes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/placeholder_generic"/>

                <TextView
                    android:id="@+id/main_quiz_high_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/placeholder_generic"/>

                <TextView
                    android:id="@+id/main_quiz_low_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/placeholder_generic"/>

                <TextView
                    android:id="@+id/main_quiz_average_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/placeholder_generic"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</ScrollView>